# adk-rust

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  STABILITY.md  devenv.nix  lefthook.yml  publish.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  semver.yml
adk-acp/: README.md
adk-acp/src/: connection.rs  (+7 more)
adk-action/: README.md
adk-agent/: Cargo.toml  README.md
adk-artifact/: README.md
adk-audio/: README.md
adk-auth/: README.md
adk-browser/: README.md
adk-cli/: Cargo.toml
adk-codeact-monty/: Cargo.toml  README.md
adk-core/: README.md
adk-deploy/: README.md
adk-devtools/: README.md
adk-gemini/: Cargo.toml  README.md
adk-graph/: Cargo.toml  README.md
adk-guardrail/: README.md
adk-managed/: README.md
adk-memory/: README.md
adk-mistralrs/: README.md
adk-model/: Cargo.toml  README.md
adk-payments/: README.md
adk-plugin/: README.md
adk-rag/: README.md
adk-realtime/: README.md
adk-runner/: Cargo.toml  README.md
adk-rust/: Cargo.toml  README.md
adk-rust-macros/: README.md
adk-server/: Cargo.toml  README.md
adk-session/: README.md
adk-telemetry/: README.md
adk-tool/: Cargo.toml  README.md
cargo-adk/: Cargo.toml  README.md
examples/a2a_quickstart/: .env.example  Cargo.toml  README.md
examples/a2a_quickstart/src/: main.rs
examples/streaming_bash/: Cargo.toml  README.md
examples/streaming_bash/assets/: index.html
examples/streaming_bash/src/: main.rs  server.rs
scripts/: bump-version.py  bump-version.sh  check-doc-versions.py  check-doc-versions.sh  ci-local.sh
(+386 files in other folders)
