[package]
name = "a2a-quickstart"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-rust = { path = "../../adk-rust", features = ["standard"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
