[package]
name = "streaming-bash-example"
version = "0.0.1"
edition = "2024"
publish = false
description = "Demonstrates streaming stdout/stderr from BashTool via emit_progress — LlmAgent with live terminal output"

[workspace]

[dependencies]
adk-core = { path = "../../adk-core" }
adk-agent = { path = "../../adk-agent" }
adk-model = { path = "../../adk-model", features = ["gemini"] }
adk-runner = { path = "../../adk-runner" }
adk-session = { path = "../../adk-session" }
adk-devtools = { path = "../../adk-devtools" }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
